[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/introscreen/start-quit.png" type="Texture" id=1]
[ext_resource path="res://assets/introscreen/DKNESOriginalTitle (2).jpg" type="Texture" id=2]
[ext_resource path="res://assets/introscreen/arcade_presentation_screen.png" type="Texture" id=3]
[ext_resource path="res://scenes/Start.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/never_gonna_give_you_up.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/introscreen/rickastley.png" type="Texture" id=6]

[node name="Start" type="Control"]
margin_left = -8.0
margin_right = 301.0
margin_bottom = 246.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -20.0
margin_top = -11.0
margin_right = 304.0
margin_bottom = 249.0

[node name="DknesOriginalTitle(2)" type="Sprite" parent="."]
position = Vector2( 136, 109 )
scale = Vector2( 0.855, 0.855 )
texture = ExtResource( 2 )

[node name="Rickastley" type="Sprite" parent="."]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
position = Vector2( 273, 60 )
rotation = 3.14159
scale = Vector2( 0.427954, 0.355949 )
texture = ExtResource( 6 )

[node name="Rickastley2" type="Sprite" parent="."]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
position = Vector2( 8, 191 )
scale = Vector2( 0.417271, 0.342143 )
texture = ExtResource( 6 )

[node name="Start-quit" type="Sprite" parent="."]
position = Vector2( 128, 193 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ArcadePresentationScreen" type="Sprite" parent="."]
position = Vector2( 127, 29 )
scale = Vector2( 0.112, 0.112 )
texture = ExtResource( 3 )

[node name="start_bttn" type="Button" parent="."]
margin_left = 97.0
margin_top = 165.0
margin_right = 160.0
margin_bottom = 185.0
flat = true

[node name="end_bttn" type="Button" parent="."]
margin_left = 102.0
margin_top = 200.0
margin_right = 156.0
margin_bottom = 220.0
flat = true

[node name="intro_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.667

[connection signal="pressed" from="start_bttn" to="." method="_on_start_bttn_pressed"]
[connection signal="pressed" from="end_bttn" to="." method="_on_end_bttn_pressed"]
